--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -1379,8 +1379,10 @@ body#contact_page #contact_nav.header_menu_link {
         display: none; } }
 
 .present_btn_wrap_join {
-  padding-right: 2rem;
-}
+  padding-right: 2rem; }
+  @media screen and (max-width: 768px) {
+      .present_btn_wrap_join {
+        padding-right: 0; } }
 
 .video_bg_wrap {
   position: absolute;
