--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -443,7 +443,8 @@ table {
 
 html {
   height: 100%;
-  font: 300 10px/1.33 "Montserrat", sans-serif; }
+  font: 300 10px/1.33 "Montserrat", sans-serif;
+  scroll-behavior: smooth; }
   @media screen and (max-width: 768px) {
     html {
       font: 300 1.3vw/1.33 "Montserrat", sans-serif; } }
