--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -1382,6 +1382,7 @@ body#contact_page #contact_nav.header_menu_link,
 
 .present_btn_wrap.center_button_wrap {
   display: block;
+  padding: 5.6rem 0 0 0;
 }
 
 .present_btn_wrap_join {
