--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -2165,6 +2165,12 @@ input[type=submit].mailchimp_input {
   text-align: center;
   font: "Montserrat", sans-serif;
   cursor: pointer;
+  border: none;
+  /*
+  border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+  border-style: solid;
+  border-width: 1px;
+  */
 }
 
 .present_btn {
