--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -2166,6 +2166,10 @@ input[type=submit].mailchimp_input {
   font-family: "Montserrat", sans-serif;
   cursor: pointer;
   border: none;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   /*
   border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
   border-style: solid;
