--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -1388,7 +1388,11 @@ body#contact_page #contact_nav.header_menu_link,
   padding: 5.6rem 0 0 0;
 }
 
-#mc_embed_signup .present_btn_wrap {
+.mailchimp_form {
+  padding: 4.6rem 0 0 0;
+}
+
+.mailchimp_form .present_btn_wrap {
   padding: 3.6rem 0 0 0;
 }
 
