--- a/styles/main_global.css
+++ b/styles/main_global.css
@@ -1389,7 +1389,7 @@ body#contact_page #contact_nav.header_menu_link,
 }
 
 .mailchimp_form {
-  padding: 4.6rem 0 0 0;
+  padding: 2.6rem 0 1rem 0;
 }
 
 .mailchimp_form .present_btn_wrap {
